# LiteNote

./: LICENSE  README.md  README_EN.md  help.html  index.html  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
docs/: CHANGELOG.md  release_1.3.0.html  video-cover.html
src/: App.tsx  help.tsx  index.css  settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  help.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ErrorBoundary.tsx  Icon.tsx  iconPaths.ts
src/components/widget/: AboutModal.tsx  ClockSection.tsx  ConfirmDialog.tsx  DueDatePicker.tsx  FocusDragHandle.tsx  FooterBar.tsx  HeaderBar.tsx  RecurrencePicker.tsx  SettingsForm.tsx  SettingsModal.tsx  TodoContextMenu.tsx  TodoList.tsx  TodoRow.tsx  WeekCalendar.tsx  WidgetShell.tsx
src/components/window/: ReminderWindow.tsx
src/hooks/: useAppInit.ts  useFocusWindowSize.ts  useNow.ts  useWidgetActions.ts
src/i18n/: index.ts  messages.ts
src/lib/: db.ts  dueDate.ts  exportTodos.ts  focusWindowSize.ts  itemColors.ts  lunarLine.ts  openHelpWindow.ts  openSettingsWindow.ts  recurrence.ts  rehydrateOnStorage.ts  reminderPoll.ts  todoImportanceColors.ts  todoSort.ts
src/stores/: settingsStore.ts  todoStore.ts
src/styles/: litenote-tokens.css
src/types/: lunar-javascript.d.ts  todo.ts
